--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,582 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@100;400;700&display=swap');
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --main-color:#c93429;
+  --body-bg:#ffffff;
+  --second-bg:#f5f5f5;
+  --text-color:#000000;
+  --text-white:#ffffff;
+  --text-gray:#868686;
+  --main-hover:#9b2d25;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+a{
+  text-decoration: none;
+  color: black;
+}
+html{
+  font-size: 1rem;
+}
+body{
+  font-family: 'Antonio', sans-serif;
+  font-weight: 100;
+  background-color: var(--body-bg);
+  overflow-x: hidden;
+  
+}
+span{
+  color: var(--main-color);
+}
+.btn{
+  background-color: var(--main-color);
+  border: none;
+  border-radius: 0 6px 6px 0;
+  padding: 7px 10px;
   color: white;
+  cursor: pointer;
+}
+.btn:hover{
+  background-color: var(--main-hover);
+}
+nav{
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 999999;
+}
+nav .wideScreenView{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 0 2rem ;
+  
+  
+
+}
+.mobileNav{
+  display: none;
+}
+.wideScreenView{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+nav .logo{
+  display: flex;
+  align-items: center;
+  color: var(--main-color);
+  min-height: 100px;
+font-size: 1.3rem;
+font-weight: 100;
+
+}
+.products{
+  display: flex;
+
+}
+.products h1{
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 1.4rem;
+  font-weight: 400;
+  padding: 0 20px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.products h1:hover{
+  color: var(--main-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+nav form input{
+height: 30px;
+border: 1px solid var(--main-color);
+border-radius: 6px 0 0 6px;
+
+
+}
+
+.search {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+ 
+}
+.search  .icon{
+  cursor: pointer;
+  padding: 0 10px;
+  font-size: 1.3rem;
+}
+.form-icons .icons .iconForm{
+  margin: 1rem;
+}
+
+.icon:hover{
+  color: var(--main-color);
+  
+}
+#herobox{
+  position: relative;
+  height: 84vh;
+  
+}
+#herobox .arrow-buttons{
+  padding-top: 1rem;
+  font-size: 2rem;
+  z-index: 99999;
+  
+
+}
+#herobox .arrow-buttons .arrow-left{
+  cursor: pointer;
+}
+#herobox .arrow-buttons .arrow-right{
+  margin-left: 2rem;
+  cursor: pointer;
+}
+
+
+.content{
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+  align-items: center;
+  
+  
+}
+.content:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 30%;
+  opacity: 0.1;
+  background-color: var(--text-gray);
+}
+
+
+.content .info{
+  
+  max-width: 500px;
+  text-align: start;
+  z-index: 99999;
+  margin-left: 5rem;
+}
+.content .info .arrow-buttons button{
+  border: none;
+ background-color: white;
+ margin-bottom: 2rem;
+ 
+}
+.content .info .arrow-buttons .arrow-right,
+.content .info .arrow-buttons .arrow-left{
+  font-size: 2.6rem;
+  cursor: pointer;
+}
+.content .info .arrow-buttons .arrow-right:hover,
+.content .info .arrow-buttons .arrow-left:hover{
+color: var(--main-color);
+}
+.content .info h1{
+font-size: 3.4rem;
+font-weight: bold;
+}
+.content .info p{
+  font-size: 1.2rem;
+  margin: 30px 0;
+}
+.content .info .btn{
+  border-radius: 3px;
+  padding: 10px 20px;
+  font-size: 1.1rem;
+}
+.content .hero-photo{
+  width: 400px;
+  height: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 60px;
+  z-index: 99999;
+  margin-top: 4rem;
+margin-right: 9rem;
+}
+
+.content .hero-photo img{
+  width: 100%;
+  height: 450px;
+  
+
+  
+}
+#Banners {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 3rem 0;
+}
+#Banners .banner{
+  height: 300px;
+  cursor: pointer;
+}
+#Banners .banner .image-container img{
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+    transition: .2s linear;
+    
+    
+}
+#Banners .banner .image-container img:hover{
+  transform: scale(1.1);
+ 
+}
+#Banners .banner .description h3{
+  font-size: 2rem;
+}
+
+.allProducts{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 1000px;
+  text-align: center;
+
+}
+.allProducts .product{
+  margin: 1rem ;
+  padding: 20px;
+  width: 200px;
+  cursor: pointer;
+}
+.allProducts .product:hover{
+  transform: scale(1.1);
+  
+}
+.allProducts .product .btn{
+  border-radius: 3px;
+}
+#Products h1{
+font-size: 3rem;
+}
+.allProducts .product img{
+  padding: 20px;
+  width: 100%;
+  height: 200px;
+}
+
+footer{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 300px;
+  width: 100%;
+  background-color: var(--text-color);
+  color:white;
+  padding: 0 2rem;
+}
+
+footer .about{
+  max-width: 300px;
+}
+footer .about h1{
+  font-size: 1.4rem;
+  padding: 1rem 0;
+}
+footer .about p{
+  text-align: start;
+  font-size: 1rem;
+}
+footer .about .icons .icon{
+  font-size: 2rem;
+  margin: 1rem ;
+  cursor: pointer;
+}
+footer .about .icon-pair{
+  display: flex;
+  align-items: center;
+  font-size: 0.8rem;
+  
+}
+footer .about .icon-pair p{
+margin-left: 0.5rem;
+font-size: 0.8rem;
+
+}
+footer .informations{
+  margin-bottom: 1rem;
+}
+footer .informations h1{
+  font-size: 1.4rem;
+  padding: 1rem 0;
+}
+
+footer .informations ul li{
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 0.2rem 0;
+}
+footer .informations ul li:hover{
+  color: var(--main-hover);
+}
+footer .contact {
+  margin-bottom: 3rem;
+}
+footer .contact h1{
+  font-size: 1.4rem;
+  padding: 1rem 0;
+ 
+}
+footer .contact .adress{
+  display: flex;
+  align-items: center;
+  
+  margin-bottom: 1rem;
+  
+}
+footer .contact .adress p{
+  margin-left: 0.3rem;
+}
+footer .contact .phone-nr{
+  display: flex;
+  align-items: center;
+  border-top: 1px solid white;
+}
+footer .contact .phone-nr p{
+  margin-left: 0.3rem;
+}
+footer .contact .mail{
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  
+}
+footer .contact .mail p{
+  margin-left: 0.3rem;
+}
+ footer .contact .social .icon{
+ font-size: 1.6rem;
+ margin-right: 1rem;
+ cursor: pointer;
+
+ }
+
+ #logos img{
+max-width: 100%;
+height: 200px;
+padding: 60px;
+cursor: pointer;
+ }
+ #product-details{
+   position: relative;
+   
+ }
+ .product-details{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+  
+   
+
+ }
+ .product-details:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 20%;
+  opacity: 0.1;
+  z-index: -9999;
+  background-color: var(--text-gray);
+ }
+ .product-details .product-photo{
+   max-width: 100%;
+ }
+ .product-details .product-photo img{
+width: 100%;
+max-height: 600px;
+ }
+ .product-details .product-description{
+   max-width: 50%;
+   padding: 20px 0;
+ }
+ .product-details .product-description .prod-name{
+   font-size: 2.3rem;
+   padding: 10px 0;
+ }
+ .product-details .product-description .ratings:hover{
+cursor: pointer;
+color: var(--main-hover);
+
+ }
+ .product-details .product-description .description {
+   padding: 20px 40px;
+ }
+ .product-details .product-description h3{
+   font-size: 1rem;
+ }
+ .product-details .product-description .price{
+   font-size: 2.5rem;
+ }
+ .product-details .product-description .size{
+   
+ }
+ .product-details .product-description .size p{
+   padding: 10px 0;
+ }
+ .product-details .product-description .options{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+ }
+ 
+ .product-details .product-description .options .option {
+   background-color: black;
+   color: white;
+   padding: 10px 20px;
+   border-radius: 5px;
+   cursor: pointer;
+ }
+ .product-details .product-description .options .option:hover{
+  background-color: white;
+  color: black;
+ }
+ .quantity {
+   margin: 20px 0;
+   
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   border: 1px solid var(--text-color);
+   border-radius: 5px;
+ }
+ .quantity button{
+   border: none;
+   font-size: 1.5rem;
+   cursor: pointer;
+ }
+ .quantity button:hover{
+   color: var(--main-hover);
+ }
+ 
+ .product-details .product-description .btn{
+   border-radius: 5px;
+   padding: 20px 40px ;
+   font-size: 1.4rem;
+ }
+
+/* phone view */
+@media only screen and ( max-width: 700px) {
+ 
+ body{
+   max-width: 700px;
+ }
+  nav .wideScreenView{
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
-  }
+nav .mobileNav{
+display: block;
+}
+nav .mobileNav .itemsNav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.logo img{
+  height: 50px;
+  margin-right: 1rem;
+}
+nav .mobileNav .itemsNav .menu{
+  font-size: 1.7rem;
+  padding: 0 10px;
+  cursor: pointer;
+}
+nav .mobileNav .itemsNav .search .icon{
+  padding-right: 1rem;
+}
+.itemsNav h1{
+ 
+  border-radius: 6px;
+  padding: 10px 20px;
+  cursor: pointer;
+
+}
+.closeBtn{
+  cursor: pointer;
+  font-size: 2rem;
+}
+.closeBtn{
+  cursor: pointer;
+  font-size: 2rem;
+}
+.closeBtnSF{
+  cursor: pointer;
+  padding-right: 10px;
+}
+.itemsNav h1:hover{
+  background-color: #9b2d25;
+}
+
+#herobox .info-description h1,
+#herobox .info-description p
+{
+  display: none;
+}
+#herobox{
+  display: flex;
+  max-width: 600px;
+  
+}
+
+#herobox img{
+  max-width: 100%;
+  max-height: 600px;
+  padding: 10px;
+  
+  
+}
+#Banners{
+  display: block;
+}
+
+footer{
+  display: block;
+ 
+  
+}
+footer .about{
+  max-width: 100%;
+  padding: 2rem;
+}
+footer .informations ul{
+list-style: none;
+}
+
+footer .contact{
+  margin-bottom: 0;
+}
+
+.product-details .product-photo img{
+  width: 100%;
+  max-height: 600px;
+   }
+
+}
+/* tablet view */
+@media only screen and ( min-width: 1000px){
+  
 }
